<resources>
    <string name="app_name">recipeCW</string>
    <string name="title_activity_new_recipe">NewRecipe</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="description">Description</string>
    <string name="_100">/100</string>
    <string name="rating">Rating:</string>
    <string name="video_name">Video Name</string>
    <string name="upload_video">Upload Video</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="ingerdients">Ingerdients:</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="_5">/5</string>
    <string name="recipes_title">Recipes Title</string>
</resources>