<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".NewRecipe"
    android:background="@color/white">

    <TextView
        android:id="@+id/RecipeNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/recipe_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/RecipeNameInput"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/recipe_name"
        android:textColorHint="#808080"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecipeNameView" />

    <TextView
        android:id="@+id/RecipeDescriptionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecipeNameInput" />

    <EditText
        android:id="@+id/RecipeDescriptionInput"
        android:layout_width="360dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/description"
        android:textColorHint="#808080"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:lines="6"
        android:maxLines="6"
        android:maxLength="200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecipeDescriptionView" />

    <TextView
        android:id="@+id/RecipeIngredientView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Add Ingredient"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecipeDescriptionInput" />

    <TextView
        android:id="@+id/IngredientListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="Ingredient List:"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecipeDescriptionInput" />

    <EditText
        android:id="@+id/RecipeIngredientInput"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="Add Ingredient"
        android:textColorHint="#808080"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecipeDescriptionInput" />

    <Button
        android:id="@+id/AddIngredient"
        android:layout_width="76dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:onClick="AddIngredient"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.979"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecipeDescriptionInput" />

    <TextView
        android:id="@+id/RatingView"
        android:layout_width="59dp"
        android:layout_height="30dp"
        android:layout_marginTop="13dp"
        android:text="@string/rating"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecipeDescriptionInput" />

    <TextView
        android:id="@+id/from100"
        android:layout_width="59dp"
        android:layout_height="29dp"
        android:layout_marginTop="18dp"
        android:text="@string/_5"
        android:textColor="@color/black"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/RatingInput"
        app:layout_constraintTop_toBottomOf="@+id/RecipeDescriptionInput" />

    <EditText
        android:id="@+id/RatingInput"
        android:layout_width="45dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:textColorHint="#808080"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/RatingView"
        app:layout_constraintTop_toBottomOf="@+id/RecipeDescriptionInput" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientRecyclerView"
        android:layout_width="398dp"
        android:layout_height="173dp"
        android:layout_marginTop="392dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/UploadVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="588dp"
        android:onClick="UploadVideo"
        android:text="@string/upload_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/VideoText"
        android:layout_width="211dp"
        android:layout_height="78dp"
        android:layout_marginTop="588dp"
        android:text="No Video Selected"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/UploadVideo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SaveRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="664dp"
        android:onClick="SaveRecipe"
        android:text="@string/save_recipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--
    <VideoView
        android:id="@+id/videoView3"
        android:layout_width="279dp"
        android:layout_height="176dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SaveRecipe" />
        -->


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>